src/main/java/com/example/demo/errors/ProductNotFoundException.java
package com.example.demo.errors;

public class ProductNotFoundException extends RuntimeException {
    public ProductNotFoundException(Long id) {
        super("Product with id " + id + " not found.");
    }
}
